assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Quicksand&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Kanit',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    color: #bac7be;
    background: #6f6866;
}

h1,
h2 {
    font-family: 'Quicksand',sans-serif;
    text-transform: uppercase;
    margin-bottom: 15px;
    
}

ul {
    list-style-type: none;
}

/* Container for the whole page */
.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 30px;
}

/* navbar and logo */
.navbar {
    color: #bac7be;
    height: 60px;
}

.navbar .logo {
    font-size: xx-large;
    font-weight: bold;
    letter-spacing: 2px;
}

.navbar a {
    color:#bac7be;
    text-decoration: none;
    font-size: 18px;
    font-weight: bold;
}

.navbar a:hover {
    border-bottom: 1px solid #bac7be;
}
.navbar .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.navbar ul {
    display: flex;
    flex-direction: row-reverse;
}

.navbar ul li {
    margin-left: 20px;
}

.active {
    border-bottom: 1px solid #bac7be;
}

/* hero image */

.hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;

    position: relative;
}

.covertext, .covertext h2 {
    color: #071108;
}

.covertext h3 {
    text-align: left;
    font-size: 90%;
}

.hero-image {
    height: 600px;
    width: 100%;
    background: url(../images/hero-image.jpg) no-repeat center center;
}

.covertext {
    font-size: 100%;
    font-family: 'Quicksand', sans-serif;
    letter-spacing: 2px;

    width: 300px;
    height: 200px;

    padding-top: 40px;
    padding-left: 10px;

    background-color: rgba(243,117,43, .8);

    bottom: 30px;
    right: 150px;

    position: absolute;
}

